# GraphCore

./: .gitignore  CMakeLists.txt  CoreDecomposition.cpp  CoreDecomposition.h  README.md  main.cpp
DataStructure/: Core.cpp  Core.h  CoreVector.cpp  CoreVector.h  Graph.cpp  Graph.h  Message.cpp  Message.h  MultiLayerGraph.cpp  MultiLayerGraph.h
Utils/: Timer.cpp  Timer.h  out.h
dataset/: homo.txt  sample.txt  simple.txt
